--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,13 +25,24 @@ steps:
     projects: '**/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
 
+- powershell: |
+   [xml]$doc = Get-Content azure-settings.runsettings
+   $doc.RunSettings.TestRunParameters.ChildNodes.Item(0).value = '$(Grid.Endpoint)'
+   $doc.RunSettings.TestRunParameters.ChildNodes.Item(1).value = '$(Build.BuildNumber)'
+   $doc.Save("azure-settings-prod.runsettings")
+  displayName: create test settings > override with production parameters
+
 - task: DotNetCoreCLI@2
   displayName: execute automated testing
   inputs:
     command: 'test'
     projects: '**/*[Tt]ests/*.csproj'
-    arguments: '--configuration $(buildConfiguration)'
+    arguments: '--configuration $(buildConfiguration) -s azure-settings-prod.runsettings'
     testRunTitle: 'Automation Testing --- $(Build.BuildNumber)'
+
+- powershell: |
+   Remove-Item azure-settings-prod.runsettings
+  displayName: cleanup
 
 - task: DotNetCoreCLI@2
   displayName: create package
