--- a/src/csharp/Gravity.Plugins.Actions/Gravity.Plugins.Actions.Tests/Gravity.Plugins.Actions.UnitTests.csproj
+++ b/src/csharp/Gravity.Plugins.Actions/Gravity.Plugins.Actions.Tests/Gravity.Plugins.Actions.UnitTests.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Gravity.Drivers.Mock" Version="2020.3.14.1" />
+    <PackageReference Include="Gravity.Drivers.Mock" Version="2020.3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Resources\license.lcn">
+    <None Update="Resources/license.lcn">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
