--- a/azure_pipelines_csharp.yml
+++ b/azure_pipelines_csharp.yml
@@ -26,10 +26,10 @@ steps:
     arguments: '--configuration $(buildConfiguration)'
 
 - powershell: |
-   [xml]$doc = Get-Content azure-settings.runsettings
+   [xml]$doc = Get-Content azure_settings_mstest.runsettings
    $doc.RunSettings.TestRunParameters.ChildNodes.Item(0).value = '$(Grid.Endpoint)'
    $doc.RunSettings.TestRunParameters.ChildNodes.Item(1).value = '$(Build.BuildNumber)'
-   $doc.Save("azure-settings-prod.runsettings")
+   $doc.Save("azure_settings_mstest_prod.runsettings")
   displayName: create test settings > override with production parameters
 
 - task: DotNetCoreCLI@2
@@ -37,11 +37,11 @@ steps:
   inputs:
     command: 'test'
     projects: '**/*[Tt]ests/*.csproj'
-    arguments: '--configuration $(buildConfiguration) -s azure-settings-prod.runsettings'
+    arguments: '--configuration $(buildConfiguration) -s azure_settings_mstest_prod.runsettings'
     testRunTitle: 'Automation Testing --- $(Build.BuildNumber)'
 
 - powershell: |
-   Remove-Item azure-settings-prod.runsettings
+   Remove-Item azure_settings_mstest_prod.runsettings
   displayName: cleanup
 
 - task: DotNetCoreCLI@2
