--- a/src/csharp/Gravity.Plugins.Actions/Gravity.Plugins.Actions.IntegrationTests/Gravity.Plugins.Actions.IntegrationTests.csproj
+++ b/src/csharp/Gravity.Plugins.Actions/Gravity.Plugins.Actions.IntegrationTests/Gravity.Plugins.Actions.IntegrationTests.csproj
@@ -1,8 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -16,9 +15,4 @@
   <ItemGroup>
     <ProjectReference Include="..\Gravity.Plugins.Actions\Gravity.Plugins.Actions.csproj" />
   </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="UiCommon\" />
-  </ItemGroup>
-
 </Project>
