--- a/src/csharp/Gravity.Plugins.Actions/Gravity.Plugins.Contracts/Gravity.Plugins.Contracts.csproj
+++ b/src/csharp/Gravity.Plugins.Actions/Gravity.Plugins.Contracts/Gravity.Plugins.Contracts.csproj
@@ -2,7 +2,7 @@
 
   <!-- Project -->
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>net5.0</TargetFrameworks>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
